--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/recharts": "^2.0.1",
     "browser-image-compression": "^2.0.2",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-matrix": "3.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
